Add API/GET/members Routes, Controllers, Unit test, Swagger Docs
