# member/app/swaggers/swagger.yaml
@@ -10,15 +10,31 @@ paths:
       description: Use this api to get all members.
       tags:
         - members
+      security:
+        - bearerAuth: []
       responses:
         '200':
           description: A list of members
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Members'
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: 'get all members'
+                  All_members:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Members'
+        '400':
+          description: Bad request
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '500':
+          description: Internal server error
   /signup:
     post:
       summary: Member sign up
@@ -71,6 +87,11 @@ paths:
                     
 
 components:
+  securitySchemes:
+      bearerAuth:
+        type: http
+        scheme: bearer
+        bearerFormat: JWT
   schemas:
     MemberSingUp:
       type: object
@@ -112,15 +133,20 @@ components:
       type: object
       required:
         - userName
+        - password
         - email
         - firstName
         - lastName
+        - permission_id
+        - Permision
       properties:
         id:
           type: integer
         userName:
           type: string
           example: 'username'
+        password:
+          type: string
         email:
           type: string
           example: 'ec1348@gmail.com'
@@ -130,6 +156,15 @@ components:
         lastName:
           type: string
           example: 'chen'
+        permission_id:
+          type: integer
+          example: 1
+        Permision:
+          type: object
+          properties:
+            name: 
+              type: string
+              example: admin
     MemberResponse:
       type: object
       required:
